Removed the blanched almond

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -8,11 +8,7 @@ html, body, .full-height {
   }
 
   .flow-image-but-really-the-flow {
-    background-color: seagreen;
-  }
-
-  .bill-of-materials {
-    background-color: blanchedalmond;
+    background-color: lightgrey;
   }
 }
 
@@ -30,17 +26,16 @@ html, body, .full-height {
 
 .bill-of-materials-icon {
   .node-thumbnail;
-  min-width: 200px;
-  margin: 2em;
+
+  height: 150px;
+  min-width: 150px;
+  margin: 2em 0;
 }
 
 .bill-of-materials {
   min-width: 80%;
   .md-tile-content {
     h3 {
-      font-size: 3em;
-    }
-    h4 {
       font-size: 2em;
     }
   }
