--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -9,9 +9,28 @@ html, body, .full-height {
 
   .flow-image-but-really-the-flow {
     background-color: lightgrey;
+    transition: 1s all;
+
+    &.importing {
+      background-color: #fff;
+    }
+  }
+
+
+  .bill-of-materials {
+    &.ng-hide-add {
+      -webkit-animation: 1s bounceOutDown ease;
+      -ms-animation: 1s bounceOutDown ease;
+      animation: 1s bounceOutDown ease;
+    }
   }
 }
 
+.flow-node-editor {
+  position: absolute;
+  max-height: 450px;
+  width:500px;
+}
 
 
 
