Add different shades of indigo

--- a/assets/less/lib/bootstrap/navbar.less
+++ b/assets/less/lib/bootstrap/navbar.less
@@ -4,8 +4,12 @@
 }
 
 md-sidenav.md-sidenav-left {
+  md-toolbar {
+    background-color: #303F9F;
+  }
+
   .navbar-logo {
-    padding: 10px;
+    padding: 10px 20px;
     width: 100%;
 
     img {
