--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -14,6 +14,7 @@ html, body, .full-height {
     .flow-editor {
       min-height:100vh;
       flex-shrink: 0;
+      -webkit-flex-shrink: 0;
     }
     &.importing {
       background-color: #fff;
@@ -28,6 +29,7 @@ html, body, .full-height {
 
   .bill-of-materials {
     transform: translateY(-350px);
+    -webkit-transform: translateY(-350px);
     min-height:350px;
 
     &.importing {
