Format the template page a bit better

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -800,7 +800,8 @@
 }
 
 .grid-item {
-  width: 100%;
+  max-height: 70px;
+  min-height: 70px;
   cursor: pointer;
   border: 3px solid #ddd;
   background-color: white;
