--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -90,14 +90,31 @@
 .flow-node-editor {
   position: absolute;
   max-height: 450px;
-  width:500px;
-     &.ng-hide-remove {
-     .show-animation;
-    }
-    &.ng-hide-add {
-     .hide-animation;
-    }
+  top: 70px;
+  width: 500px;
+  left: 15px;
+
+  padding: 0;
+  margin: 0;
+
+  &.ng-hide-remove {
+   .show-animation;
+  }
+  &.ng-hide-add {
+   .hide-animation;
+  }
+
+  md-toolbar {
+    z-index: 0;
+  }
 }
+
+@media (max-width: 960px) {
+  .flow-node-editor {
+    top: 155px;
+  }
+}
+
 
 .flow-link {
   stroke: #7f7f7f;
