--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -67,6 +67,7 @@
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.275);
 
     .dropdown-menu {
+      overflow-y: scroll;
       width: 100%;
     }
   }
