The sidenav is a little more FAB

--- a/assets/less/lib/bootstrap/navbar.less
+++ b/assets/less/lib/bootstrap/navbar.less
@@ -4,6 +4,14 @@
 }
 
 md-sidenav.md-sidenav-left {
+  overflow: visible;
+
+  .md-fab {
+    position:fixed;
+    top: 5px;
+    left: 315px;
+  }
+
   .navbar-logo {
     padding: 10px 20px;
     width: 100%;
