--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -77,6 +77,9 @@ html, body, .full-height {
   }
 }
 
+.template-preview md-input-group {
+  font-size: 1.1em;
+}
 .template-item {
   img {
     margin:15px;
