template page - for realz this time.

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -79,6 +79,9 @@ html, body, .full-height {
 
 .template-preview md-input-group {
   font-size: 1.1em;
+  input {
+    width: 50%;
+  }
 }
 .template-item {
   img {
@@ -87,6 +90,9 @@ html, body, .full-height {
   
   h3 {
     margin-top: 24px;
+  }
+  h4 {
+    margin-right: 15px;
   }
 
   cursor:pointer;
