Add more links to the home page

--- a/assets/less/home.less
+++ b/assets/less/home.less
@@ -1,10 +1,10 @@
 .page-banner {
   height: 150px;
   overflow: hidden;
+  padding: 5px;
 
   img {
     position: relative;
-    bottom: 30px;
   }
 }
 
@@ -65,4 +65,15 @@
 .blu-divider {
   height: 5px;
   background-color: @brand-primary;
+}
+
+.home-footer {
+  background-color: @brand-primary;
+  padding: 5px;
+  margin: 0 5px;
+  color: white;
+
+  a {
+    color: inherit;
+  }
 }
