--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -6,6 +6,11 @@ html, body, .full-height {
   background-color: rgba(158, 158, 158, 0.2);
 }
 
+.text-float-search {
+  input {
+    width:100%;
+  }
+}
 .materialize {
   overflow: hidden;
   .page-heading {
@@ -84,6 +89,7 @@ html, body, .full-height {
   }
 }
 .template-item {
+
   img {
     margin:15px;
   }
