changing nodes of same type now works

--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -1,13 +1,13 @@
 .hide-animation {
-  -webkit-animation: 0.25s fadeOutUp ease;
-  -ms-animation: 0.25s fadeOutUp ease;
-  animation: 0.25s fadeOutUp ease;
+  -webkit-animation: 0.5s fadeOut ease;
+  -ms-animation: 0.5s fadeOut ease;
+  animation: 0.5s fadeOut ease;
 }
 
 .show-animation {
-  -webkit-animation: 0.25s fadeInDown ease;
-  -ms-animation: 0.25s fadeOutUp ease;
-  animation: 0.25s fadeOutUp ease;
+  -webkit-animation: 0.5s fadeInDownBig ease;
+  -ms-animation: 0.5s fadeInDownBig ease;
+  animation: 0.5s fadeInDownBig ease;
 }
 
 .flow-node {
