--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -89,16 +89,13 @@
 
 .flow-node-editor {
   position: absolute;
-  // max-height: 450px;
+  max-height: 450px;
   top: 70px;
   width: 500px;
   left: 25px;
 
   padding: 0;
   margin: 0;
-
-  -webkit-transition: all linear 5s;
-  transition: all linear 5s;
 
   &.ng-hide-remove.ng-hide-remove-active {
    .show-animation;
