Notification service implemented! We even use it in two (2) pages.

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -110,3 +110,11 @@ html, body, .full-height {
     }
   }
 }
+
+.toast-container {
+  width: 100%;
+  position: absolute;
+  md-toast {
+    position: initial;
+  }
+}
