more process templates yeahhhh

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -118,3 +118,10 @@ html, body, .full-height {
     position: initial;
   }
 }
+
+.process-row {
+  font-size: 16px;
+  & > div {
+    padding: 1.5em;
+  }
+}
