more list stylezzz

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -124,12 +124,8 @@ html, body, .full-height {
   .process-row-logo {
     height: 30px;
     width: 30px;
-    margin-right: 30px;
+    margin: 0 30px;
     background-size: contain;
     background-repeat: no-repeat;
-  }
-
-  & > div {
-    padding: 1.5em;
   }
 }
