make sure buttons stay the right color

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -133,6 +133,10 @@ html, body, .full-height {
   border: 0;
   width: 35px;
 
+  &.stop-button {
+    color: #AA2200;
+  }
+
   &.btn-stopped {
     color: #AA2200;
 
@@ -140,6 +144,10 @@ html, body, .full-height {
     &:not([disabled]):focus {
       background-color: #CC2200;
     }
+  }
+
+  &.start-button {
+    color: #008800;
   }
 
   &.btn-playing {
