action buttons look purty meow

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -142,7 +142,8 @@ html, body, .full-height {
 
     &:not([disabled]):hover,
     &:not([disabled]):focus {
-      background-color: #CC2200;
+      color: #AA2200;
+      background-color: rgba(204,34,0, 0.2);
     }
   }
 
@@ -155,7 +156,8 @@ html, body, .full-height {
 
     &:not([disabled]):hover,
     &:not([disabled]):focus {
-      background-color: #00AA00;
+      color: #008800;
+      background-color: rgba(0,170,0,0.2);
     }
   }
 
