shift icon over

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -178,3 +178,8 @@ html, body, .full-height {
   }
 }
 }
+
+.container-fluid #intercom-container .intercom-launcher {
+  bottom: 40px;
+  right: 50px;
+}
