--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -185,3 +185,16 @@ html, body, .full-height {
   bottom: 40px;
   right: 50px;
 }
+.graph-container {
+  align-items: flex-end;
+  -webkit-align-items: flex-end;
+}
+.legend {
+  .legend-swatch {
+    height: 2em;
+    width: 2em;
+    margin-right: 1em;
+    margin-bottom: 0.5em;
+    border: 1px solid black;
+  }
+}
