--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -186,6 +186,7 @@ html, body, .full-height {
   right: 50px;
 }
 .graph-container {
+  margin-top: 1em;
   align-items: flex-end;
   -webkit-align-items: flex-end;
 }
