shorter chart labels

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -185,6 +185,10 @@ html, body, .full-height {
   bottom: 40px;
   right: 50px;
 }
+
+.analyze-card {
+  margin: 1em;
+}
 .graph-container {
   margin-top: 1em;
   align-items: flex-end;
