--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -188,6 +188,9 @@ html, body, .full-height {
 
 .analyze-card {
   margin: 1em;
+  min-width: 900px;
+  max-width: 1600px;
+  flex-wrap: wrap;
 }
 .graph-container {
   margin-top: 1em;
