Islandized the analyzed page

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -188,8 +188,6 @@ html, body, .full-height {
 
 .analyze-card {
   margin: 1em;
-  min-width: 400px;
-  max-width: 1600px;
   .message {
     .message-frame {
       transition: 0.7s max-height;
@@ -197,7 +195,7 @@ html, body, .full-height {
       max-height: 7em;
       overflow: hidden;
       pre[class*="language-"] {
-        overflow: auto;
+        // overflow: auto;
         max-height: none;
       }
       &.full-message {
