added fancy logos to the admin page.

--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -80,9 +80,21 @@
 }
 
 .resource-icon {
-  font-size: 1.5em;
+  .node-thumbnail;
+  height: 3em;
+  width: 3em;
+  margin-right: 2em;
+}
+
+.resource-dropdown-icon {
+  .node-thumbnail;
+  height: 2em;
+  width: 2em;
+  margin-right: 1em;
+  display: inline-block;
 }
 
 .resource-panel .panel-footer ul.dropdownmenu {
 
 }
+
