Make the profile page purdiar

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -11,6 +11,7 @@ html, body, .full-height {
     width:100%;
   }
 }
+
 .materialize {
   overflow: hidden;
   .page-heading {
@@ -217,6 +218,19 @@ html, body, .full-height {
     }
   }
 }
+
+.profile-card {
+  margin: 1em;
+
+  .card-content {
+    padding: 1em;
+  }
+
+  button.md-button {
+    min-width: 4em;
+  }
+}
+
 .graph-container {
   margin-top: 1em;
   align-items: flex-end;
