Fixation on pulsating buttons

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -83,7 +83,7 @@ md-sidenav.md-sidenav-left {
 .flow-controls {
   min-width: 275px;
 
-  .md-button.md-octo-blue-theme {
+  .md-button {
     color: white;
     border: 0;
     width: 35px;
