Fix hover state and button margins

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -3,6 +3,7 @@
 @import 'lib/animate.less';
 @import 'animations.less';
 @import 'device.less';
+@import 'login.less';
 @import 'nodes.less';
 @import 'flow.less';
 @import 'flow-nodes.less';
