Update button padding, logo size

--- a/assets/less/login.less
+++ b/assets/less/login.less
@@ -9,22 +9,23 @@
 }
 
 .login-octoblu-logo {
-  height : 100px;
-  width : 100px;
+  height : 120px;
+  width : 120px;
   margin: 75px auto 40px;
 }
 
 .md-button {
-  span {
-    text-transform: normal;
-  }
-
   &.login-button {
     color: #F0F0F0;
     font-size: 1.2em;
     text-decoration: none;
 
     margin: 0 8px 16px;
+    padding: 10px 6px;
+
+    span {
+      text-transform: none;
+    }
   }
 
   &.login-button-email {
