--- a/assets/less/login.less
+++ b/assets/less/login.less
@@ -14,6 +14,17 @@
   margin: 75px auto 40px;
 }
 
+.login-notice {
+  background: #FFFDE7;
+  border: 1px solid #FFF59D;
+  margin: 0 10px 16px;
+  padding: 10px 10px 0;
+
+  p {
+    line-height: 1.5;
+  }
+}
+
 .md-button {
   &.login-button {
     color: #F0F0F0;
