add new profile page and controller

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -10,6 +10,7 @@
 @import 'flex.less';
 @import 'type.less';
 @import 'omnibox.less';
+@import 'profile.less';
 @import 'admin.less';
 @import 'invitation.less';
 @import 'home.less';
