broke all tests related to tutorials! Also, tutorials barely work.

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -183,8 +183,8 @@ html, body, .full-height {
 }
 
 .container-fluid #intercom-container .intercom-launcher {
-  bottom: 40px;
-  right: 50px;
+  top: 100px;
+  right: 20px;
 }
 
 .analyze-card {
