Added a resource page and route in app.js

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -11,6 +11,7 @@
 @import 'type.less';
 @import 'omnibox.less';
 @import 'profile.less';
+@import 'resources.less';
 @import 'admin.less';
 @import 'invitation.less';
 @import 'home.less';
