Adding toggle thumbnail and detail view for operator nodes

--- a/assets/less/nodes.less
+++ b/assets/less/nodes.less
@@ -18,9 +18,8 @@
 .node-thumbnail {
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: center center;
+  background-position: center;
   height: 200px;
-
 }
 
 .muted-link {
