--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -7,6 +7,8 @@
 @import 'nodes.less';
 @import 'flow.less';
 @import 'flow-nodes.less';
+@import 'flow-node-detail-list.less';
+@import 'flow-node-thumbnail-list.less';
 @import 'flex.less';
 @import 'type.less';
 @import 'omnibox.less';
