Add loading & error state to oauth page

--- a/assets/less/home.less
+++ b/assets/less/home.less
@@ -8,6 +8,10 @@
   }
 }
 
+.oauth-provider-loading-card {
+  margin-top: 10em;
+}
+
 @media(min-width: 768px) {
   .page-banner {
     height: 300px;
