--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -6,6 +6,7 @@
 @import 'login.less';
 @import 'nodes.less';
 @import 'flow.less';
+@import 'flow-tutorial.less';
 @import 'flow-nodes.less';
 @import 'flex.less';
 @import 'type.less';
