update node browser layout

--- a/assets/less/flow-node-thumbnail-list.less
+++ b/assets/less/flow-node-thumbnail-list.less
@@ -1,5 +1,9 @@
 
 .node-grid-list {
+  md-grid-tile {
+    cursor: pointer;
+  }
+
   .node-thumbnail {
     max-height: 110px;
     max-width: 110px;
