use md-icon and autoscale size

--- a/assets/less/flow-node-thumbnail-list.less
+++ b/assets/less/flow-node-thumbnail-list.less
@@ -4,6 +4,11 @@
     cursor: pointer;
   }
 
+  md-icon {
+    width: 50%;
+    height: 50%;
+  }
+
   .node-thumbnail {
     max-height: 110px;
     max-width: 110px;
