Allow user to exit the tutorial

--- a/assets/less/flow-tutorial.less
+++ b/assets/less/flow-tutorial.less
@@ -1,6 +1,8 @@
-.flow-tutorial-shepherd {
-  a.shepherd-button:hover {
-    background: #2C82DF !important;
-    text-decoration: none;
-  }
+a.end-tutorial-button {
+  background: none !important;
+}
+
+a.flow-tutorial-button:hover {
+  text-decoration: none;
+  background: #2C82DF !important;
 }
