--- a/assets/less/flow-node-thumbnail-list.less
+++ b/assets/less/flow-node-thumbnail-list.less
@@ -3,18 +3,11 @@
   md-grid-tile {
     cursor: pointer;
   }
+}
 
-  md-icon {
-    width: 50%;
-    height: 50%;
-  }
-
-  .node-thumbnail {
-    max-height: 110px;
-    max-width: 110px;
-    width: 80%;
-    height: 80%;
-  }
+.node-grid-thumbnail {
+  width: 50%;
+  height: 50%;
 }
 
 .node-grid-title-footer {
