Separated flows from configured nodes and made unique thumbnail list button

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -743,6 +743,11 @@ md-toolbar {
       flex: 1;
       display: flex;
       justify-content: flex-end;
+
+      .flow-browser-control-icon {
+        height: 16px;
+        width: 16px;
+      }
     }
   }
   .drawer {
