--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -2,6 +2,13 @@ html, body, .full-height {
   height: 100%;
 }
 
+.ugly-table,
+.ugly-table tr,
+.ugly-table th,
+.ugly-table td {
+  border: 1px solid black;
+}
+
 .selected-item {
   background-color: rgba(158, 158, 158, 0.2);
 }
