--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -1,6 +1,7 @@
 @import 'lib/bootstrap/bootstrap.less';
 @import 'lib/bootstrap-social.less';
 @import 'lib/animate.less';
+@import 'lib/flexbox.less';
 @import 'animations.less';
 @import 'device.less';
 @import 'login.less';
