--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -190,8 +190,10 @@ html, body, .full-height {
 }
 
 .container-fluid #intercom-container .intercom-launcher {
-  top: 100px;
-  right: 20px;
+  bottom: 10px;
+  right: 10px;
+  transition: 0.5s all;
+  -webkit-transition: 0.5s all;
 }
 
 .analyze-card {
