--- a/.kubernetes/docker-builder/docker-builder-pod.yaml.tmpl
+++ b/.kubernetes/docker-builder/docker-builder-pod.yaml.tmpl
@@ -18,6 +18,8 @@ desiredState:
           - name: docker-sock
             mountPath: /var/run/docker.sock
         env:
+          - name: SKIP_CLEAN
+            value: "true"
           - name: GIT_REPO
             value: $GIT_REPO
           - name: GIT_TAG
