--- a/.kubernetes/deploy/octoblu-green-controller.yaml.tmpl
+++ b/.kubernetes/deploy/octoblu-green-controller.yaml.tmpl
@@ -19,7 +19,7 @@ desiredState:
         version: v1beta1
         id: octoblu-green
         env:
-          - name: PORT
+          - name: OCTOBLU_PORT
             value: 9000
           - name: NODE_ENV
             value: $NODE_ENV
