--- a/.kubernetes/deploy/octoblu-green-controller.yaml.tmpl
+++ b/.kubernetes/deploy/octoblu-green-controller.yaml.tmpl
@@ -35,11 +35,11 @@ desiredState:
               - name: AIRBRAKE_KEY
                 value: $AIRBRAKE_KEY
               - name: INVITATION_REQUIRED
-                value: true
+                value: "true"
               - name: ELASTIC_SEARCH_URI
                 value: $ELASTIC_SEARCH_URI
               - name: USE_APP_DYNAMICS
-                value: true
+                value: "true"
               - name: APP_DYNAMICS_KEY
                 value: $APP_DYNAMICS_KEY
               - name: APP_DYNAMICS_TIER_NAME
