--- a/.kubernetes/deploy/octoblu-blue-controller.yaml.tmpl
+++ b/.kubernetes/deploy/octoblu-blue-controller.yaml.tmpl
@@ -39,7 +39,7 @@ desiredState:
               - name: ELASTIC_SEARCH_URI
                 value: $ELASTIC_SEARCH_URI
               - name: USE_APP_DYNAMICS
-                value: "true"
+                value: "false"
               - name: APP_DYNAMICS_KEY
                 value: $APP_DYNAMICS_KEY
               - name: APP_DYNAMICS_TIER_NAME
