--- a/.kubernetes/deploy/app-octoblu-frontend-green-service.yaml.tmpl
+++ b/.kubernetes/deploy/app-octoblu-frontend-green-service.yaml.tmpl
@@ -1,15 +1,15 @@
-id: octoblu-blue
+id: app-octoblu-green
 kind: Service
 apiVersion: v1beta1
-port: $BLUE_PORT
-containerPort: 9000
+port: $GREEN_PORT
+containerPort: 80
 publicIPs:
   - 172.20.0.10
   - 172.20.0.11
   - 172.20.0.12
   - 172.20.0.13
 labels:
-  name: octoblu-blue
+  name: app-octoblu-frontend-green
   version: 1.0.0
 selector:
-  name: octoblu-blue
+  name: app-octoblu-frontend-green
