--- a/.kubernetes/deploy/appspec.yml.tmpl
+++ b/.kubernetes/deploy/appspec.yml.tmpl
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /deploy/octoblu/$TRAVIS_COMMIT
+    destination: /deploy/app-octoblu-frontend/$TRAVIS_COMMIT
 hooks:
   ApplicationStart:
     - location: application_start
