use branch and git tag

--- a/.kubernetes/docker-builder/docker-builder-pod.yaml.tmpl
+++ b/.kubernetes/docker-builder/docker-builder-pod.yaml.tmpl
@@ -22,6 +22,8 @@ desiredState:
             value: "true"
           - name: GIT_REPO
             value: $GIT_REPO
+          - name: GIT_BRANCH
+            value: $TRAVIS_BRANCH
           - name: GIT_TAG
             value: $TRAVIS_COMMIT
           - name: IMAGE_NAME
