--- a/.kubernetes/docker-builder/docker-builder-pod.yaml.tmpl
+++ b/.kubernetes/docker-builder/docker-builder-pod.yaml.tmpl
@@ -19,8 +19,8 @@ desiredState:
         env:
           - name: SKIP_CLEAN
             value: "true"
-          - name: GIT_REPO
-            value: $GIT_REPO
+          - name: TGZ_URL
+            value: $TGZ_URL
           - name: GIT_BRANCH
             value: $TRAVIS_BRANCH
           - name: GIT_TAG
