--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -12,6 +12,12 @@ html, body, .full-height {
   }
 }
 
+.octo-tile {
+  h1 {
+    margin-bottom: 5px;
+  }
+}
+
 .materialize {
   overflow: hidden;
   .page-heading {
