--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -20,3 +20,11 @@
 @import 'invitation.less';
 @import 'home.less';
 @import 'styles.less';
+
+@import (less) '../../public/lib/fontawesome/css/font-awesome.css';
+@import (less) '../../public/lib/nvd3/nv.d3.css';
+@import (less) '../../public/lib/prism/themes/prism-coy.css';
+@import (less) '../../public/lib/angular-chart.js/dist/angular-chart.css';
+@import (less) '../../public/lib/angular-material/angular-material.css';
+@import (less) '../../public/lib/shepherd.js/css/shepherd-theme-default.css';
+@import (less) '../../public/lib/shepherd.js/css/shepherd-theme-dark.css';
