--- a/assets/less/browse.less
+++ b/assets/less/browse.less
@@ -1,21 +1,20 @@
 md-grid-tile {
   transition: all 400ms ease-out 50ms;
-  }
-
-.template-link{
+}
+.template-link {
   text-decoration: none;
-  color: 000;
-  }
-
-.template-link a:hover{
+  color: 0;
+}
+.template-link a:hover {
   text-decoration: none;
   cursor: pointer;
-  }
-
-.template-description{
-    text-align: center;
-  }
-
-.tile-container{
+}
+.template-description {
+  text-align: center;
+}
+.tile-container {
   padding-bottom: 10%;
+}
+.template {
+  cursor: pointer;
 }
