--- a/assets/less/device.less
+++ b/assets/less/device.less
@@ -87,16 +87,16 @@
   padding: 2em;
 
   .device-header {
-    .flexbox;
+    .flex-display;
     .flex-direction(row);
     .justify-content(space-between);
 
     .logo-header {
-      .flexbox;
+      .flex-display;
       .flex-direction(row);
 
       .device-name {
-        .flexbox;
+        .flex-display;
         .flex-direction(column);
         .justify-content(center);
 
@@ -111,7 +111,7 @@
     }
 
     .device-actions {
-      .flexbox;
+      .flex-display;
       .flex-direction(column);
       .justify-content(space-around);
     }
@@ -123,7 +123,7 @@
       height: 2em;
       line-height: 2;
 
-      .flexbox;
+      .flex-display;
       .flex-direction(row);
 
       .meta-key {
