--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -1,6 +1,7 @@
 @import 'lib/bootstrap/bootstrap.less';
 @import 'lib/bootstrap-social.less';
 @import 'lib/animate.less';
+@import 'media-queries.less';
 @import 'animations.less';
 @import 'device.less';
 @import 'login.less';
@@ -20,10 +21,12 @@
 @import 'home.less';
 @import 'octos.less';
 @import 'styles.less';
+@import 'flow-directory.less';
+@import 'templates.less';
+
 
 @import (less) '../../public/lib/fontawesome/css/font-awesome.css';
 @import (less) '../../public/lib/nvd3/nv.d3.css';
-@import 'browse.less';
 @import (less) '../../public/lib/prism/themes/prism-coy.css';
 @import (less) '../../public/lib/angular-chart.js/dist/angular-chart.css';
 @import (less) '../../public/lib/angular-material/angular-material.css';
