--- a/assets/less/media-queries.less
+++ b/assets/less/media-queries.less
@@ -5,4 +5,6 @@
 @mobile:      ~"only screen and (max-width: 529px)";
 @tablet:      ~"only screen and (min-width: 530px) and (max-width: 949px)";
 @desktop:     ~"only screen and (min-width: 950px) and (max-width: 1128px)";
-@desktop-xl:  ~"only screen and (min-width: 1129px)";
+@desktop-lg:  ~"only screen and (min-width: 1129px) and (max-width: 1439px)";
+@desktop-xl:  ~"only screen and (min-width: 1440px) and (max-width: 1920px)";
+@desktop-xxl: ~"only screen and (min-width: 1921px)";
