you can like flows now! :D

--- a/assets/less/flow-directory.less
+++ b/assets/less/flow-directory.less
@@ -101,8 +101,17 @@
 
 .directory__flow-meta {
   margin-right: 10px;
+
+  .liked {
+    color: #C53A3A;
+    cursor: default;
+  }
 }
 
 .directory__flow-meta--downloads {
   margin-right: 0;
+}
+
+.directory__flow-meta--likes i {
+  cursor: pointer;
 }
